# cube

./: README.md  flake.nix  pyproject.toml
overlays/: nvshmem.nix
src/cube/: __init__.py  cube.py
