[project]
name = "cube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "ShilohAlleyne", email = "ShilohAlleyne@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.17.3",
    "kaleido>=1.1.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "sentence-transformers>=5.1.2",
]

[project.scripts]
cube = "cube:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
